# IRC-bot-v2

./: .gitignore  .replit  DONOTLOOK.py  LICENSE  README.md  crom.py  crom2.py  crom3.py  database.db  db.py  local_googlesearch-python.py  local_googlesearch_python.py  log.py  main.py  new.py  pastebin2.py  pyproject.toml  stuff.py  test.py
local_pyscp/pyscp/: utils.py
main/: crom.py  db.py  main.py  pastebin2.py  security.py  test.py  test2.py
