[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.12.13",
    "beautifulsoup4>=4.13.4",
    "googlesearch-python>=1.3.0",
    "html5lib==1.1",
    "pastebin>=1.1.2",
    "pyscp>=1.1.20",
    "requests>=2.32.3",
    "sift-stack-py>=0.5.2",
    "youtube-search==2.1.2",
]
